--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+.bennebank {
+  background-image: url("assets/benne-auf-ner-bank.jpg");
+}
+
 /*!
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -19,7 +23,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: hotpink;
+  --primary: #f05a67;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -55,7 +59,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: Arial;
+  font-family: lato;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -152,12 +156,12 @@ sup {
 }
 
 a {
-  color: hotpink;
+  color: #f05a67;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #ff1d8e;
+  color: #e81527;
   text-decoration: underline;
 }
 
@@ -1726,21 +1730,21 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #ffd5ea;
+  background-color: #fbd1d4;
 }
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #ffb1d8;
+  border-color: #f7a9b0;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #ffbcdd;
+  background-color: #f9babe;
 }
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #ffbcdd;
+  background-color: #f9babe;
 }
 
 .table-secondary,
@@ -2013,9 +2017,9 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #ffe9f4;
+  border-color: #fbcfd3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(255, 105, 180, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(240, 90, 103, 0.25);
 }
 .form-control::placeholder {
   color: #6c757d;
@@ -2427,7 +2431,7 @@ textarea.form-control {
 }
 .btn:focus, .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(255, 105, 180, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(240, 90, 103, 0.25);
 }
 .btn.disabled, .btn:disabled {
   opacity: 0.65;
@@ -2441,33 +2445,33 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #212529;
-  background-color: hotpink;
-  border-color: hotpink;
+  color: #fff;
+  background-color: #f05a67;
+  border-color: #f05a67;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #ff43a1;
-  border-color: #ff369b;
+  background-color: #ed3747;
+  border-color: #ec2b3c;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #ff43a1;
-  border-color: #ff369b;
-  box-shadow: 0 0 0 0.2rem rgba(222, 95, 159, 0.5);
+  background-color: #ed3747;
+  border-color: #ec2b3c;
+  box-shadow: 0 0 0 0.2rem rgba(242, 115, 126, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #212529;
-  background-color: hotpink;
-  border-color: hotpink;
+  color: #fff;
+  background-color: #f05a67;
+  border-color: #f05a67;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #ff369b;
-  border-color: #ff2994;
+  background-color: #ec2b3c;
+  border-color: #eb2031;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(222, 95, 159, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(242, 115, 126, 0.5);
 }
 
 .btn-secondary {
@@ -2681,28 +2685,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: hotpink;
-  border-color: hotpink;
+  color: #f05a67;
+  border-color: #f05a67;
 }
 .btn-outline-primary:hover {
-  color: #212529;
-  background-color: hotpink;
-  border-color: hotpink;
+  color: #fff;
+  background-color: #f05a67;
+  border-color: #f05a67;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(255, 105, 180, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(240, 90, 103, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: hotpink;
+  color: #f05a67;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
-  color: #212529;
-  background-color: hotpink;
-  border-color: hotpink;
+  color: #fff;
+  background-color: #f05a67;
+  border-color: #f05a67;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(255, 105, 180, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(240, 90, 103, 0.5);
 }
 
 .btn-outline-secondary {
@@ -2882,11 +2886,11 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: hotpink;
+  color: #f05a67;
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #ff1d8e;
+  color: #e81527;
   text-decoration: underline;
 }
 .btn-link:focus, .btn-link.focus {
@@ -3159,7 +3163,7 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: hotpink;
+  background-color: #f05a67;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
@@ -3485,19 +3489,19 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: hotpink;
-  background-color: hotpink;
+  border-color: #f05a67;
+  background-color: #f05a67;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(255, 105, 180, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(240, 90, 103, 0.25);
 }
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #ffe9f4;
+  border-color: #fbcfd3;
 }
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: white;
-  border-color: white;
+  background-color: #fffefe;
+  border-color: #fffefe;
 }
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
   color: #6c757d;
@@ -3541,17 +3545,17 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: hotpink;
-  background-color: hotpink;
+  border-color: #f05a67;
+  background-color: #f05a67;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(255, 105, 180, 0.5);
+  background-color: rgba(240, 90, 103, 0.5);
 }
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(255, 105, 180, 0.5);
+  background-color: rgba(240, 90, 103, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -3561,7 +3565,7 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(255, 105, 180, 0.5);
+  background-color: rgba(240, 90, 103, 0.5);
 }
 
 .custom-switch {
@@ -3592,7 +3596,7 @@ input[type=button].btn-block {
   transform: translateX(0.75rem);
 }
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(255, 105, 180, 0.5);
+  background-color: rgba(240, 90, 103, 0.5);
 }
 
 .custom-select {
@@ -3611,9 +3615,9 @@ input[type=button].btn-block {
   appearance: none;
 }
 .custom-select:focus {
-  border-color: #ffe9f4;
+  border-color: #fbcfd3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(255, 105, 180, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(240, 90, 103, 0.25);
 }
 .custom-select:focus::-ms-value {
   color: #495057;
@@ -3669,8 +3673,8 @@ input[type=button].btn-block {
   opacity: 0;
 }
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #ffe9f4;
-  box-shadow: 0 0 0 0.2rem rgba(255, 105, 180, 0.25);
+  border-color: #fbcfd3;
+  box-shadow: 0 0 0 0.2rem rgba(240, 90, 103, 0.25);
 }
 .custom-file-input[disabled] ~ .custom-file-label, .custom-file-input:disabled ~ .custom-file-label {
   background-color: #e9ecef;
@@ -3725,13 +3729,13 @@ input[type=button].btn-block {
   outline: none;
 }
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem rgba(255, 105, 180, 0.25);
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem rgba(240, 90, 103, 0.25);
 }
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem rgba(255, 105, 180, 0.25);
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem rgba(240, 90, 103, 0.25);
 }
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem rgba(255, 105, 180, 0.25);
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem rgba(240, 90, 103, 0.25);
 }
 .custom-range::-moz-focus-outer {
   border: 0;
@@ -3740,7 +3744,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: hotpink;
+  background-color: #f05a67;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3752,7 +3756,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-webkit-slider-thumb:active {
-  background-color: white;
+  background-color: #fffefe;
 }
 .custom-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -3766,7 +3770,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: hotpink;
+  background-color: #f05a67;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3778,7 +3782,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-moz-range-thumb:active {
-  background-color: white;
+  background-color: #fffefe;
 }
 .custom-range::-moz-range-track {
   width: 100%;
@@ -3795,7 +3799,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: hotpink;
+  background-color: #f05a67;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3807,7 +3811,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-ms-thumb:active {
-  background-color: white;
+  background-color: #fffefe;
 }
 .custom-range::-ms-track {
   width: 100%;
@@ -3914,7 +3918,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: hotpink;
+  background-color: #f05a67;
 }
 
 .nav-fill .nav-item {
@@ -4556,13 +4560,13 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: hotpink;
+  color: #f05a67;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 .page-link:hover {
   z-index: 2;
-  color: #ff1d8e;
+  color: #e81527;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -4570,7 +4574,7 @@ input[type=button].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(255, 105, 180, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(240, 90, 103, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -4585,8 +4589,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: hotpink;
-  border-color: hotpink;
+  background-color: #f05a67;
+  border-color: #f05a67;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4661,16 +4665,16 @@ a.badge:hover, a.badge:focus {
 }
 
 .badge-primary {
-  color: #212529;
-  background-color: hotpink;
+  color: #fff;
+  background-color: #f05a67;
 }
 a.badge-primary:hover, a.badge-primary:focus {
-  color: #212529;
-  background-color: #ff369b;
+  color: #fff;
+  background-color: #ec2b3c;
 }
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(255, 105, 180, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(240, 90, 103, 0.5);
 }
 
 .badge-secondary {
@@ -4810,15 +4814,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #85375e;
-  background-color: #ffe1f0;
-  border-color: #ffd5ea;
+  color: #7d2f36;
+  background-color: #fcdee1;
+  border-color: #fbd1d4;
 }
 .alert-primary hr {
-  border-top-color: #ffbcdd;
+  border-top-color: #f9babe;
 }
 .alert-primary .alert-link {
-  color: #612845;
+  color: #582126;
 }
 
 .alert-secondary {
@@ -4931,7 +4935,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: hotpink;
+  background-color: #f05a67;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5010,8 +5014,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: hotpink;
-  border-color: hotpink;
+  background-color: #f05a67;
+  border-color: #f05a67;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -5151,17 +5155,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #85375e;
-  background-color: #ffd5ea;
+  color: #7d2f36;
+  background-color: #fbd1d4;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #85375e;
-  background-color: #ffbcdd;
+  color: #7d2f36;
+  background-color: #f9babe;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #85375e;
-  border-color: #85375e;
+  background-color: #7d2f36;
+  border-color: #7d2f36;
 }
 
 .list-group-item-secondary {
@@ -5527,7 +5531,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: Arial;
+  font-family: lato;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5629,7 +5633,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: Arial;
+  font-family: lato;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -6017,13 +6021,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: hotpink !important;
+  background-color: #f05a67 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #ff369b !important;
+  background-color: #ec2b3c !important;
 }
 
 .bg-secondary {
@@ -6145,7 +6149,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: hotpink !important;
+  border-color: #f05a67 !important;
 }
 
 .border-secondary {
@@ -9708,11 +9712,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: hotpink !important;
+  color: #f05a67 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #ff1d8e !important;
+  color: #e81527 !important;
 }
 
 .text-secondary {
